manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: judebook-service
  namespace: directory
spec:
  selector:
    app: judebook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
