manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: judeingress
  namespace: directory
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:322266404742:certificate/bc574743-1292-4051-8152-77e1646f6655
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/ssl-redirect: "80"
    alb.ingress.kubernetes.io/healthcheck-path: /judebook-1.0.0
    alb.ingress.kubernetes.io/success-codes: "200,302"
    alb.ingress.kubernetes.io/load-balancer-name: dev-alb
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  rules:
    - host: judebook.judemn.net
      http:
        paths:
          - path: /judebook-1.0.0
            pathType: Prefix
            backend:
              service:
                name: judebook-service
                port:
                  number: 80
